--- a/p180/bin/AndroidManifest.xml
+++ b/p180/bin/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:name=".HistoryActivity"
             android:label="@string/title_activity_history" >
         </activity>
+        <activity
+            android:name=".StaticActivity"
+            android:label="@string/title_activity_static" >
+        </activity>
     </application>
 
 </manifest>
